--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,7 @@ br {
 	display: block !important;
 }
 
+/* Tables */
 .table {
 	overflow-x: auto;
 }
@@ -32,12 +33,22 @@ br {
 	white-space: nowrap;
 }
 
+/* Scrollbar */
+
 ::-webkit-scrollbar {
-	height: 0px;
+	height: 8px;
 	width: 0px;
-	overflow: hidden;
 }
 
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px grey; 
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #fff; 
+	border-radius: 10px;
+}
 
 /* Particles */
 
