--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3614,7 +3614,7 @@ body.is-menu-visible #menu {
 	#banner {
 		padding: 7em 3em 5em 3em;
 		height: auto;
-		min-height: 0;
+		min-height: 100vh;
 	}
 	#banner h2 {
 		font-size: 1.25em;
