--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3484,6 +3484,7 @@ body.is-menu-visible #menu {
 	position: relative;
 	left: 0;
 	right: 0;
+	min-height: 100vh;
 	margin-left: auto;
 	margin-right: auto;
 }
