--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,217 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic");
 
+/* VIDEO GRID */
+/* body {
+	font-family: 'Overpass', sans-serif;
+  }
+  
+  .section-header {
+	text-align: center;
+	margin: 60px auto 20px auto;
+  
+	font-family: 'Montserrat', sans-serif;
+	font-size: 36px;
+	font-weight: 400;
+	text-transform: uppercase;
+	color: #222;
+  }
+  
+  .section-header-underline {
+	border: 1px solid #222;
+	width: 3rem;
+	margin: 0 auto;
+	margin-bottom: 30px;
+  } */
+  
+  .video-gallery {
+	position: relative;
+	margin: 0 auto;
+	max-width: 1000px;
+	text-align: center;
+  }
+  
+  .video-gallery .gallery-item {
+	position: relative;
+	display: inline-block;
+	overflow: hidden;
+	margin: 10px 1%;
+	min-width: 320px;
+	max-width: 580px;
+	max-height: 360px;
+	width: 48%;
+	background: #000;
+	cursor: pointer;
+  }
+  
+  .video-gallery .gallery-item img {
+	position: relative;
+	display: block;
+	opacity: .45;
+	width: 105%;
+	height: 300px;
+	transition: opacity 0.35s, transform 0.35s;
+	transform: translate3d(-23px, 0, 0);
+	backface-visibility: hidden;
+  }
+  
+  /* .video-gallery .gallery-item .gallery-item-caption {
+	padding: 2em;
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 1.25em;
+  } */
+  
+  .video-gallery .gallery-item .gallery-item-caption,
+  .video-gallery .gallery-item .gallery-item-caption > a {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+  }
+  
+  /* .video-gallery .gallery-item h2 {
+	font-weight: 300;
+	overflow: hidden;
+	padding: 0.5em 0;
+  } */
+  
+  
+  /* .video-gallery .gallery-item h2,
+  .video-gallery .gallery-item p {
+	position: relative;
+	margin: 0;
+	z-index: 10;
+  } */
+  
+  /* .video-gallery .gallery-item p {
+	letter-spacing: 1px;
+	font-size: 68%;
+  
+	padding: 1em 0;
+	opacity: 0;
+	transition: opacity 0.35s, transform 0.35s;
+	transform: translate3d(10%, 0, 0);
+  } */
+/*   
+  .video-gallery .gallery-item:hover img {
+	opacity: .3;
+	transform: translate3d(0, 0, 0);
+  
+  }
+  
+  .video-gallery .gallery-item .gallery-item-caption {
+	text-align: left;
+  } */
+  
+  .video-gallery .gallery-item h2::after {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 15%;
+	height: 1px;
+	background: #fff;
+	
+	transition: transform 0.3s;
+	transform: translate3d(-100%, 0, 0);
+  }
+  
+  @media screen and (max-width: 50em) {
+	.video-gallery .gallery-item {
+	  display: inline-block;
+	  float: none;
+	  margin: 10px auto;
+	  width: 100%;
+	}
+  }
+  
+.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+
+/* IMAGE GRID  */
+  .container > a {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 2em;
+  }
+  
+  .container > a > img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	box-shadow: 0 2px 16px var(--shadow);
+  }
+  
+  .container {
+	display: grid;
+	grid-gap: 10px;
+	grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+	grid-auto-rows: 120px;
+	grid-auto-flow: dense;
+  }
+  
+  .horizontal {
+	grid-column: span 2;
+  }
+  
+  .vertical {
+	grid-row: span 2;
+  }
+  
+  .big {
+	grid-column: span 2;
+	grid-row: span 2;
+  }
+  
+  /** LIGHTBOX MARKUP **/
+  
+  .lightbox {
+	  /** Default lightbox to hidden */
+	  display: none;
+  
+	  /** Position and style */
+	  position: fixed;
+	  z-index: 999;
+	  width: 100%;
+	  height: 100%;
+	  text-align: center;
+	  top: 0;
+	  left: 0;
+	  background: rgba(0,0,0,0.8);
+  }
+  
+  .lightbox img {
+	  /** Pad the lightbox image */
+	  max-width: 90%;
+	  max-height: 80%;
+	  margin-top: 2%;
+  }
+  
+  .lightbox:target {
+	  /** Remove default browser outline */
+	  outline: none;
+  
+	  /** Unhide lightbox **/
+	  display: block;
+  }
+
+
 /* Profile Picture */
 
 .img-container {
