--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3926,7 +3926,7 @@ body.is-mobile #main>header {
 
 #footer {
 	padding: 6em 0 4em 0;
-	background-color: #1d242a;
+	background-color: #7e8b96;
 	text-align: center;
 }
 
@@ -4050,5 +4050,5 @@ body.is-mobile.landing .wrapper.style6 {
 }
 
 body.is-mobile.landing #footer {
-	background-color: #1d242a;
+	background-color: #000000;
 }
