--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
 	background-color: #000000;
 	z-index: -1;
 	position: absolute !important;
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	background-size: cover !important;
 	-webkit-background-size: cover !important;
