--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 	z-index: -1;
 	position: absolute !important;
 	height: 100vh;
-	width: 100vh;
+	width: 100vw;
 	background-size: cover !important;
 	-webkit-background-size: cover !important;
 	text-align: center;
