--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@
 	position: absolute !important;
 	height: 100vh;
 	width: 100vw;
+	min-height: -webkit-fill-available;
 	background-size: cover !important;
 	-webkit-background-size: cover !important;
 	text-align: center;
@@ -3631,15 +3632,14 @@ body.is-menu-visible #menu {
 	-ms-justify-content: center;
 	justify-content: center;
 	cursor: default;
-	height: 100vh;
-	width: 100vw;
+	height: auto;
 	overflow: hidden;
 	text-align: center;
 	/* altered */
 	position: relative;
 	left: 0;
 	right: 0;
-	/* min-height: 100vh; */
+	min-height: 100vh;
 	margin-left: auto;
 	margin-right: auto;
 }
