--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3632,14 +3632,14 @@ body.is-menu-visible #menu {
 	-ms-justify-content: center;
 	justify-content: center;
 	cursor: default;
-	height: auto;
+	/* altered */
+	height: 100vh;
 	overflow: hidden;
 	text-align: center;
 	/* altered */
 	position: relative;
 	left: 0;
 	right: 0;
-	min-height: 100vh;
 	margin-left: auto;
 	margin-right: auto;
 }
