--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,11 +9,35 @@
 	position: absolute !important;
 	height: 100vh;
 	width: 100vw;
-	min-height: -webkit-fill-available;
+	/* min-height: -webkit-fill-available;
+	 */
 	background-size: cover !important;
 	-webkit-background-size: cover !important;
 	text-align: center;
 	overflow: hidden;
+
+	display: -moz-flex;
+	display: -webkit-flex;
+	display: -ms-flex;
+	display: flex;
+	-moz-flex-direction: column;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-moz-justify-content: center;
+	-webkit-justify-content: center;
+	-ms-justify-content: center;
+	justify-content: center;
+	cursor: default;
+	/* altered */
+	overflow: hidden;
+	text-align: center;
+	/* altered */
+	position: relative;
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* Profile Picture */
