--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,8 +9,7 @@
 	position: absolute !important;
 	height: 100vh;
 	width: 100vw;
-	/* min-height: -webkit-fill-available;
-	 */
+	/* min-height: -webkit-fill-available; */
 	background-size: cover !important;
 	-webkit-background-size: cover !important;
 	text-align: center;
