--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,30 +14,6 @@
 	-webkit-background-size: cover !important;
 	text-align: center;
 	overflow: hidden;
-
-	display: -moz-flex;
-	display: -webkit-flex;
-	display: -ms-flex;
-	display: flex;
-	-moz-flex-direction: column;
-	-webkit-flex-direction: column;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-moz-justify-content: center;
-	-webkit-justify-content: center;
-	-ms-justify-content: center;
-	justify-content: center;
-	cursor: default;
-	/* altered */
-	/* height: 100vh; */
-	overflow: hidden;
-	text-align: center;
-	/* altered */
-	position: relative;
-	left: 0;
-	right: 0;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 /* Profile Picture */
@@ -3656,8 +3632,8 @@ body.is-menu-visible #menu {
 	-ms-justify-content: center;
 	justify-content: center;
 	cursor: default;
-	/* altered */
 	height: 100vh;
+	width: 100vw;
 	overflow: hidden;
 	text-align: center;
 	/* altered */
