--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3632,7 +3632,7 @@ body.is-menu-visible #menu {
 	-ms-justify-content: center;
 	justify-content: center;
 	cursor: default;
-	height: 100vh;
+	/* height: 100vh; */
 	width: 100vw;
 	overflow: hidden;
 	text-align: center;
