--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3632,8 +3632,8 @@ body.is-menu-visible #menu {
 	-ms-justify-content: center;
 	justify-content: center;
 	cursor: default;
-	/* height: 100vh; */
-	width: 100vw;
+	height: 100%;
+	width: 100%;
 	overflow: hidden;
 	text-align: center;
 	/* altered */
