--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
 	background-color: #000000;
 	z-index: -1;
 	position: absolute !important;
-	/* height: 100vh; */
+	height: 100vh;
 	width: 100vw;
 	min-height: -webkit-fill-available;
 	background-size: cover !important;
@@ -3632,8 +3632,8 @@ body.is-menu-visible #menu {
 	-ms-justify-content: center;
 	justify-content: center;
 	cursor: default;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 	overflow: hidden;
 	text-align: center;
 	/* altered */
