--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@
 	text-align: center;
 	height: auto;
 	width: 100%;
-	margin-top: 20px;
+	/* margin-top: 15%; */
 }
 
 .profile-img {
@@ -3633,7 +3633,7 @@ body.is-menu-visible #menu {
 	justify-content: center;
 	cursor: default;
 	height: 100vh;
-	overflow: hidden;
+	/* overflow: hidden; */
 	text-align: center;
 	/* altered */
 	padding-top: 15%;
