--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
 	background-color: #000000;
 	z-index: -1;
 	position: absolute !important;
-	height: 100vh;
+	min-height: 100vh;
 	width: 100vw;
 	min-height: -webkit-fill-available;
 	background-size: cover !important;
