--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,6 +1,19 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic");
 
+/* Particles */
+
+.particles {
+	background-color: #000000;
+	z-index: -1;
+	position: absolute !important;
+	height: 100vh;
+	background-size: cover !important;
+	-webkit-background-size: cover !important;
+	text-align: center;
+	overflow: hidden;
+}
+
 /* Profile Picture */
 
 .img-container {
@@ -21,6 +34,7 @@ br {
 }
 
 /* Tables */
+
 .table {
 	overflow-x: auto;
 }
@@ -33,6 +47,87 @@ br {
 	white-space: nowrap;
 }
 
+/* VIDEO GRID */
+
+.video-gallery {
+	position: relative;
+	margin: 0 auto;
+	max-width: 1000px;
+	text-align: center;
+}
+
+.video-gallery .gallery-item {
+	position: relative;
+	display: inline-block;
+	overflow: hidden;
+	margin: 10px 1%;
+	min-width: 320px;
+	max-width: 580px;
+	max-height: 360px;
+	width: 48%;
+	background: #000;
+	cursor: pointer;
+}
+
+.video-gallery .gallery-item img {
+	position: relative;
+	display: block;
+	opacity: .45;
+	width: 105%;
+	height: 300px;
+	transition: opacity 0.35s, transform 0.35s;
+	transform: translate3d(-23px, 0, 0);
+	backface-visibility: hidden;
+}
+
+.video-gallery .gallery-item .gallery-item-caption,
+.video-gallery .gallery-item .gallery-item-caption>a {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.video-gallery .gallery-item h2::after {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 15%;
+	height: 1px;
+	background: #fff;
+	transition: transform 0.3s;
+	transform: translate3d(-100%, 0, 0);
+}
+
+@media screen and (max-width: 50em) {
+	.video-gallery .gallery-item {
+		display: inline-block;
+		float: none;
+		margin: 10px auto;
+		width: 100%;
+	}
+}
+
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 /* Scrollbar */
 
 ::-webkit-scrollbar {
@@ -41,27 +136,80 @@ br {
 }
 
 ::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 5px grey; 
+	box-shadow: inset 0 0 5px grey;
 	border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-	background: #fff; 
+	background: #fff;
 	border-radius: 10px;
 }
 
-/* Particles */
+/* IMAGE GRID  */
 
-.particles {
-	background-color: black;
-	z-index: -1;
-	position: absolute !important;
-	height: 100vh;
+.container>a {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 2em;
+}
+
+.container>a>img {
 	width: 100%;
-	background-size: cover !important;
-	-webkit-background-size: cover !important;
+	height: 100%;
+	object-fit: cover;
+	box-shadow: 0 2px 16px var(--shadow);
+}
+
+.container {
+	display: grid;
+	grid-gap: 10px;
+	grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+	grid-auto-rows: 120px;
+	grid-auto-flow: dense;
+}
+
+.horizontal {
+	grid-column: span 2;
+}
+
+.vertical {
+	grid-row: span 2;
+}
+
+.big {
+	grid-column: span 2;
+	grid-row: span 2;
+}
+
+/** LIGHTBOX MARKUP **/
+
+.lightbox {
+	/** Default lightbox to hidden */
+	display: none;
+	/** Position and style */
+	position: fixed;
+	z-index: 999;
+	width: 100%;
+	height: 100%;
 	text-align: center;
-	overflow: hidden;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.8);
+}
+
+.lightbox img {
+	/** Pad the lightbox image */
+	max-width: 90%;
+	max-height: 80%;
+	margin-top: 2%;
+}
+
+.lightbox:target {
+	/** Remove default browser outline */
+	outline: none;
+	/** Unhide lightbox **/
+	display: block;
 }
 
 
@@ -324,7 +472,7 @@ i {
 }
 
 
-/* changed */
+/* altered */
 
 p {
 	margin: 0 0 1em 0;
@@ -372,7 +520,7 @@ h3 {
 }
 
 @media screen and (max-width: 736px) {
-	/* changed */
+	/* altered */
 	.profile-img {
 		border-radius: 50%;
 		height: auto;
@@ -1663,7 +1811,7 @@ header h6+p {
 }
 
 header.major {
-	margin: 0 0 3.5em 0;
+	margin: 0 0 2em 0;
 }
 
 header.major h2,
@@ -2589,14 +2737,20 @@ button:disabled,
 	flex-direction: row-reverse;
 }
 
+
+/* altered */
+
 .spotlight:nth-child(1) {
-	background-color: rgba(0, 0, 0, 0.075);
-	background-color: #1d242ae6;
+	background-color: #000000;
+	/* background-color: #1d242ae6; */
 }
 
+
+/* altered */
+
 .spotlight:nth-child(2) {
-	background-color: rgba(0, 0, 0, 0.15);
-	background-color: #1d242ae6;
+	background-color: #000000;
+	/* background-color: #1d242ae6; */
 }
 
 .spotlight:nth-child(3) {
@@ -2668,7 +2822,7 @@ button:disabled,
 /* Wrapper */
 
 .wrapper {
-	padding: 6em 0 4em 0;
+	padding: 4em 0 4em 0;
 }
 
 .wrapper>.inner {
@@ -2863,8 +3017,8 @@ button:disabled,
 }
 
 .wrapper.style3 {
-	/* changed */
-	background-color: #112D32;
+	/* altered */
+	background-color: #020c1b;
 	color: #d3d4e4;
 }
 
@@ -3037,7 +3191,7 @@ button:disabled,
 }
 
 
-/* changed */
+/* altered */
 
 .wrapper.style6 {
 	background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/header-background.jpg");
@@ -3479,7 +3633,7 @@ body.is-menu-visible #menu {
 	height: auto;
 	overflow: hidden;
 	text-align: center;
-	/* changed */
+	/* altered */
 	position: relative;
 	left: 0;
 	right: 0;
@@ -3765,12 +3919,16 @@ body.is-mobile #main>header {
 	background-attachment: scroll;
 }
 
+/* Description */
+p.description {
+	text-align: left;
+}
 
 /* Footer */
 
 #footer {
 	padding: 6em 0 4em 0;
-	background-color: #1d242a;
+	background-color: #7e8b96;
 	text-align: center;
 }
 
@@ -3850,8 +4008,11 @@ body.landing #page-wrapper {
 	padding-top: 0;
 }
 
+
+/* altered */
+
 body.landing #footer {
-	background-color: rgba(29, 36, 42, 0.9);
+	background-color: #000000;
 }
 
 body.is-mobile.landing #page-wrapper {
@@ -3859,7 +4020,7 @@ body.is-mobile.landing #page-wrapper {
 }
 
 
-/* changed */
+/* altered */
 
 body.is-mobile.landing #banner {
 	background-position: center center;
@@ -3878,7 +4039,7 @@ body.is-mobile.landing .wrapper.style4 {
 }
 
 
-/* changed */
+/* altered */
 
 body.is-mobile.landing .wrapper.style6 {
 	background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/header-background.jpg");
@@ -3891,5 +4052,5 @@ body.is-mobile.landing .wrapper.style6 {
 }
 
 body.is-mobile.landing #footer {
-	background-color: #1d242a;
+	background-color: #000000;
 }
