--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,8 +8,6 @@
 	z-index: -1;
 	position: absolute !important;
 	height: 100vh;
-	width: 100vw;
-	min-height: -webkit-fill-available;
 	background-size: cover !important;
 	-webkit-background-size: cover !important;
 	text-align: center;
@@ -3632,13 +3630,14 @@ body.is-menu-visible #menu {
 	-ms-justify-content: center;
 	justify-content: center;
 	cursor: default;
-	height: 100vh;
+	height: auto;
 	overflow: hidden;
 	text-align: center;
 	/* altered */
 	position: relative;
 	left: 0;
 	right: 0;
+	min-height: 100vh;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -3767,7 +3766,7 @@ body.is-menu-visible #menu {
 @media screen and (max-width: 736px) {
 	#banner {
 		padding: 4em 3em 5em 3em;
-		min-height: 100vh;
+		height: 100vh;
 	}
 	#banner h2 {
 		font-size: 1.25em;
