--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,11 +7,17 @@
 	background-color: #000000;
 	z-index: -1;
 	position: absolute !important;
-	height: 100vh;
+	min-height: 100vh;
+	width: 100vw;
 	background-size: cover !important;
 	-webkit-background-size: cover !important;
 	text-align: center;
 	overflow: hidden;
+}
+
+.tsparticles-canvas-el {
+	height: 100vh !important;
+	width: 100vw !important;
 }
 
 /* Profile Picture */
