--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,18 +7,18 @@
 	background-color: #000000;
 	z-index: -1;
 	position: absolute !important;
-	min-height: 100vh;
-	width: 100vw;
+	min-height: 100%;
+	width: 100%;
 	background-size: cover !important;
 	-webkit-background-size: cover !important;
 	text-align: center;
 	overflow: hidden;
 }
-
+/* 
 .tsparticles-canvas-el {
 	height: 100vh !important;
 	width: 100vw !important;
-}
+} */
 
 /* Profile Picture */
 
@@ -3636,7 +3636,7 @@ body.is-menu-visible #menu {
 	-ms-justify-content: center;
 	justify-content: center;
 	cursor: default;
-	height: auto;
+	/* height: 100; */
 	overflow: hidden;
 	text-align: center;
 	/* altered */
